# fedresearch-dictionary-extractor

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/ops/: extraction-cohort-definitions.md
docs/plans/: 2026-04-22-pr1-initial-extractor.md  2026-04-22-pr1.1-validation-harness.md  2026-04-22-pr1.2-quality.md  2026-04-24-classifier-tightening.md  2026-04-24-invalid-term-blocklist.md  (+26 more)
scripts/: build_labels_yaml.py  measure_section_distribution.py  refresh_classifier_snapshot.py  refresh_option_b_fixture.py  verify_classifier_module.sh
tests/: test_army_profile_invalid_term.py  test_asterisk_prefix.py  test_batch1_reconciled.py  test_citation_fragment_pipeline.py  test_cli_smoke.py  test_dedupe.py  test_deterministic_flag.py  test_glossary_acronym_band.py  test_glossary_class1_preservation.py  test_glossary_d3c_precision.py  test_glossary_headers.py  test_glossary_parser_fixtures.py  test_glossary_real_fixtures.py  test_glossary_running_header_filter.py  test_glossary_section_ii_narrowing.py  test_glossary_unit_d1_acceptance.py  test_inline_anchoring.py  test_intra_page_boundary.py  test_labels_classifier.py  test_normalize.py  test_section_headers.py  test_text_layer.py  test_v0_2_a_corpus_refresh.py  test_validation_set.py  test_validation_set_golden.py
validation_set/: README.md  batch1_reconciled.yaml  classifier_snapshot.yaml  classifier_snapshot_prefix.yaml  labels-batch1.yaml  labels-batch2-section-i.manifest.json  labels-batch2-section-i.yaml  labels.example.yaml  manifest.json  manifest_audit.md  pdfs  v0.2.0_classifier_snapshot_diff.md  v0.5-d1-followup-candidates.yaml  v0.5-unit-d1-acceptance.yaml  v0.5-unit-d1-accepted-deviations.yaml  v0.5-unit-d1-class1-range-preservation.yaml  v0.5-unit-d1-gap-scan.txt  v0.5-unit-d1-v04-golden-output.json  v0.5-unit-d2-baseline.json  v0.5-unit-d2-cohort.csv  v0.5-unit-d2-range-validation.csv  v0.5-unit-d3a-expected-acronyms.yaml  v0.5-unit-d3a-section-classification.csv  v0.5-unit-d3b-running-header-inventory.csv  v0.5-unit0-cohort.csv  v0.5-unit0-measurements.tsv
(+73 files in other folders)
